tests/inputs/valid/map-07.js
const map = [
    ['','','','','+','-','O','-','N','-','+'],
    ['','','','','|','','','','','','|'],
    ['','','','','|','','','','+','-','I','-','+'],
    ['@','-','G','-','O','-','+','','|','','|','','|'],
    ['','','','','y','','|','','+','-','+','','E'],
    ['','','','','+','-','+','','','','','','S'],
    ['','','','','','','','','','','','','|'],
    ['','','','','','','','','','','','','x'],
];

module.exports = map;

