tests/inputs/invalid/map-04.js
const map = [
    ['@','-','-','A','-','-','-','+'],
    ['','','','','','','|'],
    ['','','','','','','C'],
    ['','','','','','','x'],
    ['','','@','-','B','-','+'],
];

module.exports = map;